dataset1235/2025-2/610742602/users/1141075619/executions/677928262_2819779400.log
== SUBMISSION (2025-08-28 03:27:29)
-- CODE: 
Q= float (input ("Insira a quantidade:"))
VU= float (input("Insira o valor:"))
F= float (input ("Insira o valor do frete:"))

PT= Q * VU + F

print (PT)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
---- user output:
Insira a quantidade:Insira o valor:Insira o valor do frete:1642.5
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
Insira a quantidade:Insira o valor:Insira o valor do frete:240171.0
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
---- user output:
Insira a quantidade:Insira o valor:Insira o valor do frete:540.0
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
Insira a quantidade:Insira o valor:Insira o valor do frete:765.0
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
---- user output:
Insira a quantidade:Insira o valor:Insira o valor do frete:162.56
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
Insira a quantidade:Insira o valor:Insira o valor do frete:618.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 03:27:02)
-- CODE: 
Q= float (input ("Insira a quiantidade:"))
VU= float (input("Insira o valor:"))
F= float (input ("Insira o valor do frete:"))
 PT= Q * VU + F

print (PT)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
File "XXXX", line 4
    PT= Q * VU + F
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
File "XXXX", line 4
    PT= Q * VU + F
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
File "XXXX", line 4
    PT= Q * VU + F
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
File "XXXX", line 4
    PT= Q * VU + F
IndentationError: unexpected indent
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
File "XXXX", line 4
    PT= Q * VU + F
IndentationError: unexpected indent
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
File "XXXX", line 4
    PT= Q * VU + F
IndentationError: unexpected indent
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 03:26:59)
-- CODE: 
Q= float (input ("Insira a quiantidade:"))
VU= float (input("Insira o valor:"))
F= float (input ("Insira o valor do frete:"))
 PT= Q * VU + F

print (PT)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
File "XXXX", line 4
    PT= Q * VU + F
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
File "XXXX", line 4
    PT= Q * VU + F
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
File "XXXX", line 4
    PT= Q * VU + F
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
File "XXXX", line 4
    PT= Q * VU + F
IndentationError: unexpected indent
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
File "XXXX", line 4
    PT= Q * VU + F
IndentationError: unexpected indent
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
File "XXXX", line 4
    PT= Q * VU + F
IndentationError: unexpected indent
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 03:25:54)
-- CODE: 
Q= float (input ("Insira a quantidade:"))
VU= float (input("Insira o valor:"))
F= float (input ("Insira o valor do frete:"))
 PT= Q *VU + F

print (PT)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
File "XXXX", line 4
    PT= Q *VU + F
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
File "XXXX", line 4
    PT= Q *VU + F
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
File "XXXX", line 4
    PT= Q *VU + F
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
File "XXXX", line 4
    PT= Q *VU + F
IndentationError: unexpected indent
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
File "XXXX", line 4
    PT= Q *VU + F
IndentationError: unexpected indent
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
File "XXXX", line 4
    PT= Q *VU + F
IndentationError: unexpected indent
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 03:26:17)
-- CODE: 
Q= float (input ("Insira a quantidade:"))
VU= float (input("Insira o valor:"))
F= float (input ("Insira o valor do frete:"))
 PT= Q * VU + F

print (PT)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
File "XXXX", line 4
    PT= Q * VU + F
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
File "XXXX", line 4
    PT= Q * VU + F
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
File "XXXX", line 4
    PT= Q * VU + F
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
File "XXXX", line 4
    PT= Q * VU + F
IndentationError: unexpected indent
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
File "XXXX", line 4
    PT= Q * VU + F
IndentationError: unexpected indent
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
File "XXXX", line 4
    PT= Q * VU + F
IndentationError: unexpected indent
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 03:26:19)
-- CODE: 
Q= float (input ("Insira a quantidade:"))
VU= float (input("Insira o valor:"))
F= float (input ("Insira o valor do frete:"))
 PT= Q * VU + F

print (PT)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
File "XXXX", line 4
    PT= Q * VU + F
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
File "XXXX", line 4
    PT= Q * VU + F
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
File "XXXX", line 4
    PT= Q * VU + F
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
File "XXXX", line 4
    PT= Q * VU + F
IndentationError: unexpected indent
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
File "XXXX", line 4
    PT= Q * VU + F
IndentationError: unexpected indent
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
File "XXXX", line 4
    PT= Q * VU + F
IndentationError: unexpected indent
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 03:27:00)
-- CODE: 
Q= float (input ("Insira a quiantidade:"))
VU= float (input("Insira o valor:"))
F= float (input ("Insira o valor do frete:"))
 PT= Q * VU + F

print (PT)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
File "XXXX", line 4
    PT= Q * VU + F
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
File "XXXX", line 4
    PT= Q * VU + F
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
File "XXXX", line 4
    PT= Q * VU + F
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
File "XXXX", line 4
    PT= Q * VU + F
IndentationError: unexpected indent
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
File "XXXX", line 4
    PT= Q * VU + F
IndentationError: unexpected indent
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
File "XXXX", line 4
    PT= Q * VU + F
IndentationError: unexpected indent
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 03:25:58)
-- CODE: 
Q= float (input ("Insira a quantidade:"))
VU= float (input("Insira o valor:"))
F= float (input ("Insira o valor do frete:"))
 PT= Q *VU + F

print (PT)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
File "XXXX", line 4
    PT= Q *VU + F
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
File "XXXX", line 4
    PT= Q *VU + F
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
File "XXXX", line 4
    PT= Q *VU + F
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
File "XXXX", line 4
    PT= Q *VU + F
IndentationError: unexpected indent
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
File "XXXX", line 4
    PT= Q *VU + F
IndentationError: unexpected indent
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
File "XXXX", line 4
    PT= Q *VU + F
IndentationError: unexpected indent
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
